@@ -62,9 +62,9 @@ public class FSMessageTransformer implements MessageRetrievalTransformer<FSMessa
         metadata.setMessageInfo(getMessageInfo(submission));
         metadata.setMpc(submission.getMpc());
         ProcessingType processingType = submission.getProcessingType();
-        if(processingType==null){
-            processingType=ProcessingType.PUSH;
-            LOG.debug("Submission processing type is null, setting default processing type:[{}]",processingType);
+        if (processingType == null) {
+            processingType = ProcessingType.PUSH;
+            LOG.debug("Submission processing type is null, setting default processing type:[{}]", processingType);
         }
         metadata.setProcessingType(eu.domibus.plugin.fs.ebms3.ProcessingType.valueOf(processingType.name()));
         metadata.setPartyInfo(getPartyInfoFromSubmission(submission));
@@ -312,7 +312,7 @@ public class FSMessageTransformer implements MessageRetrievalTransformer<FSMessa
             submission.setAgreementRef(agreementRef.getValue());
             submission.setAgreementRefType(agreementRef.getType());
         }
-        if(service != null) {
+        if (service != null) {
             submission.setService(service.getValue());
             submission.setServiceType(service.getType());
         }
